Update minimum sdk version to 21

--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -26,6 +26,7 @@ android {
     namespace "com.example.frontend"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
+    minSdkVersion 21
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
