--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   camera: ^0.11.0+1
   permission_handler: ^11.3.1
-  microphone: ^0.1.0
+  # microphone: ^0.1.0
   image_picker: ^0.8.4+4
   flutter:
     sdk: flutter
