--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "altorouter/altorouter": "^2.0",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "cboden/ratchet": "^0.4.4"
     }
 }
