--- a/backend/composer.json
+++ b/backend/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "altorouter/altorouter": "^2.0",
         "vlucas/phpdotenv": "^5.6",
-        "cboden/ratchet": "^0.4.4"
+        "cboden/ratchet": "^0.4.4",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
