--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.11
   local_auth: ^2.1.4
   curved_navigation_bar: ^1.0.3
+  http:
 
 dev_dependencies:
   flutter_test:
