--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   path_provider: ^2.1.3
   # permission_handler: ^11.3.1
   # microphone: ^0.1.0
-  image_picker: ^0.8.4+4
+  # image_picker: ^0.8.4+4
+  image_picker:
   flutter:
     sdk: flutter
 
