--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   camera: ^0.11.0+1
   flutter_sound: ^9.7.0
   path_provider: ^2.1.3
+  liquid_pull_to_refresh: ^3.0.1
   # permission_handler: ^11.3.1
   # microphone: ^0.1.0
   # image_picker: ^0.8.4+4
