--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   camera: ^0.11.0+1
-  flutter_sound: ^9.7.0
+  flutter_sound: ^9.6.0
   path_provider: ^2.1.3
   # permission_handler: ^11.3.1
   # microphone: ^0.1.0
@@ -49,6 +49,7 @@ dependencies:
   http:
   provider:
   quickalert:
+  zego_uikit_prebuilt_call: ^4.9.0
 
 dev_dependencies:
   flutter_test:
